procps-ng-NEXT
---------------
  * local: guard SIGPOLL for MacOS                         merge !246
  * top: provides for ignoring configuration file(s)       issue #365
  * pgrep: Fix unhex breakage for signal numbers           issue #369
  * pgrep: Match on process ID                             Debian #612146
  * pgrep: Add process_mrelease                            merge !250
  * pgrep.1: Note that we can only go to 100th of second   issue #376
  * pmap: add -k option to print raw names from kernel     merge !251
  * ps: parse --help correctly                             issue #381
  * ps: Add --delimiter option                             issue #118
  * ps: ps f forest works under pid 1                      issue #102
  * ps.1: cols and collums alias width option              Debian #926361
  * ps.1: Add format equivalents                           Debian #925437
  * slabtop: Increase column width                         Debian #959375
  * sysctl: Return error if EPERM or EISDIR                merge !228
  * sysctl: Use options after --system                     Debian #978989
  * w: Add terminal mode to show all terminal sessions     issue #375
  * w: Use process TTY as backup for user TTY              Debian #1080335
  * watch: Add --follow option                             Debian #469156
  * watch: 256 color support                               issue #44
  * watch.1: Warn about -d permanent option                Debian #883638

procps-ng-4.0.5
---------------
  * library
    increment current, revision and age to 0: 1:0:0
    internal: days/users when value is 0                   issue #303
    internal: dont print 60s but increment minute          issue #302
    internal: stat api fixed remaining cpu distortions     issue #321
    internal: only count user sessions
    internal: Recover from meminfo seek using LXC          Debian #1072831
    internal: stat api no longer counts guest tics twice   issue #339