@@ -209,6 +209,11 @@ or similar tools.
 Only match processes with a userspace signal handler present for the signal to
 be sent.
 .TP
+\fB\-Q\fR, \fB\-\-shell\-quote\fR\fR
+Output the command line in shell-quoted form.
+.RB ( pgrep
+only.)
+.TP
 \fB\-\-cgroup \fIname\fP,.\|.\|.
 Match on provided control group (cgroup) v2 name. See
 .BR cgroups (8)
